# SelfResearch

./: .env  .gitignore  .npmignore  AGENTS.md  README.md  __init__.py  full_demo.py  main.py  package.json  phillvision_core.py  premium_workflow.py  pyproject.toml  requirements.txt  settings.json.example  settings_manager.py  setup_models.py  stress_test_daemon.py  theme_manager.py  thorough_stress_test.py  train_neuroresearcher.py  ultimate_workflow.py
.browser_data_dir/: Local State
.secrets/: sandbox_api_token
SelfResearch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analysis/: __init__.py  advanced_prompt_optimizer.py  contextual_prompt_optimizer.py  dataset_analyzer.py  meta_prompt_optimizer.py  prompt_annealing_optimizer.py  prompt_augmenter.py  prompt_bandit_optimizer.py  prompt_bayes_optimizer.py  prompt_embedding_tuner.py  prompt_evolver.py  prompt_optimizer.py  prompt_rl_optimizer.py
assessment/: active_rubric.json  rubric_grader.py
config/: model_paths.py
data/: __init__.py  dataset_loader.py
digital_literacy/: browser_controller.py  source_evaluator.py
eval/: language_model_evaluator.py
memory/: persistent_rag.py  research_cache.py  sota_learner.py  vae_compressor.py
memory_store/: stress_test_rag.json  stress_test_rag_v2.json
models/: __init__.py  model_wrapper.py
peer_collab/: active_reviewer.py  bio_orchestrator.py  collaboration_server.py
research/: PhillVision_Abstract_V1.md  weight_transfer_findings.md
research_workflow/: __init__.py  topic_selector.py
security/: auth_and_ethics.py
skills/: project_architecture.md  (+3 more)
(+94 files in other folders)
